Convertir a HTML5, modificar estilos, etc

--- a/index.html
+++ b/index.html
@@ -1,38 +1,44 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="es" lang="es">
+<!DOCTYPE html>
+<html lang="es">
 <head>
-    <title>Título</title>
-    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-    <link rel="stylesheet" href="css/estilos.css"></link>
+    <title>AwitaMC Network</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="css/estilos.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700;800&display=swap" rel="stylesheet" />
 </head>
 
 <body>
-    <div class="contenedor">
-        <h1>Un título</h1>
-        <img src="placeholder" alt="Una imagen"></img>
-
-        <p>Un pequeño texto de presentación</p>
+    <div class="contenedor acrylic">
+        <p class="subheading">Bienvenido a</p>
+        <h1>AwitaMC Network</h1>
 
         <ul>
             <li>
-                <h2>Secciones</h2>
+                <h2>Enlaces de interés</h2>
             </li>
             <li>
                 <ul>
-                    <li><a href="1">Sección 1</a></li>
-                    <li><a href="2">Sección 2</a></li>
-                    <li><a href="3">Sección 3</a></li>
-                </ul>
-            </li>
-            <li>
-                <h2>Enlaces externos</h2>
-            </li>
-            <li>
-                <ul>
-                    <li><a href="1">Externo 1</a></li>
-                    <li><a href="2">Externo 2</a></li>
-                    <li><a href="3">Externo 3</a></li>
+                    <li>
+                        <a href="https://discord.awitamc.net/">
+                            <span class="large-icon"><i class="fab fa-discord"></i></span>
+                            <span class="icon-label">Discord</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://guia.awitamc.net/">
+                            <span class="large-icon"><i class="fas fa-book-atlas"></i></span>
+                            <span class="icon-label">Guía</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://bans.awitamc.net/">
+                            <span class="large-icon"><i class="fas fa-gavel"></i></span>
+                            <span class="icon-label">Sanciones</span>
+                        </a>
+                    </li>
                 </ul>
             </li>
         </ul>
