Cambiar márgenes, añadir footer

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
             </li>
         </ul>
     </div>
+
+    <footer class="acrylic">
+        <p>Esta página es de código abierto.<br><a href="https://github.com/AwitaMC/Inicio" target="_blank">Visita el código fuente aquí.</a></p>
+    </footer>
 </body>
 
 </html>
