Añadir página de donación

--- a/index.html
+++ b/index.html
@@ -23,20 +23,26 @@
                 <ul>
                     <li>
                         <a href="https://discord.awitamc.net/">
-                            <span class="large-icon"><i class="fab fa-discord"></i></span>
+                            <span class="large-icon"><i class="fa-brands fa-discord"></i></span>
                             <span class="icon-label">Discord</span>
                         </a>
                     </li>
                     <li>
                         <a href="https://guia.awitamc.net/">
-                            <span class="large-icon"><i class="fas fa-book-atlas"></i></span>
+                            <span class="large-icon"><i class="fa-solid fa-book-atlas"></i></span>
                             <span class="icon-label">Guía</span>
                         </a>
                     </li>
                     <li>
                         <a href="https://bans.awitamc.net/">
-                            <span class="large-icon"><i class="fas fa-gavel"></i></span>
+                            <span class="large-icon"><i class="fa-solid fa-gavel"></i></span>
                             <span class="icon-label">Sanciones</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/donar.html">
+                            <span class="large-icon"><i class="fa-solid fa-hand-holding-dollar"></i></span>
+                            <span class="icon-label">Donar</span>
                         </a>
                     </li>
                 </ul>
