Cambiar icono sanciones, añadir color de fondo en hover

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </li>
                     <li>
                         <a href="https://bans.awitamc.net/">
-                            <span class="large-icon"><i class="fa-solid fa-gavel"></i></span>
+                            <span class="large-icon"><i class="fa-solid fa-user-slash"></i></span>
                             <span class="icon-label">Sanciones</span>
                         </a>
                     </li>
