Establecer anchura mínima de los child del flex, añadir link al mapa

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
                         </a>
                     </li>
                     <li>
+                        <a href="https://mapa.awitamc.net/">
+                            <span class="large-icon"><i class="fa-solid fa-earth-americas"></i></span>
+                            <span class="icon-label">Mapa Survival</span>
+                        </a>
+                    </li>
+                    <li>
                         <a href="https://bans.awitamc.net/">
                             <span class="large-icon"><i class="fa-solid fa-user-slash"></i></span>
                             <span class="icon-label">Sanciones</span>
