Añadir aviso de cambio a NekoCraft

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <p class="subheading">Bienvenido a</p>
         <h1>AwitaMC Network</h1>
 
+        <div class="alerta acrylic">
+            AwitaMC ahora es NekoCraft Network. Únete a nuestro servidor de Discord para más información.
+        </div>
+
         <ul>
             <li>
                 <h2>Enlaces de interés</h2>
